WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 114958
WTF::AtomicString::find() should take unsigned 'start' argument
https://bugs.webkit.org/show_bug.cgi?id=114958
Summary
WTF::AtomicString::find() should take unsigned 'start' argument
David Kilzer (:ddkilzer)
Reported
2013-04-22 07:35:46 PDT
Fixes the following warnings with -Wshorten-64-to-32: AtomicString.h:113:76: error: implicit conversion loses integer precision: 'size_t' (aka 'unsigned long') to 'unsigned int' [-Werror,-Wshorten-64-to-32] size_t find(UChar c, size_t start = 0) const { return m_string.find(c, start); } ~~~~~~~~ ^~~~~ AtomicString.h:115:35: error: implicit conversion loses integer precision: 'size_t' (aka 'unsigned long') to 'unsigned int' [-Werror,-Wshorten-64-to-32] { return m_string.find(s, start, caseSentitive); } ~~~~~~~~ ^~~~~ AtomicString.h:117:35: error: implicit conversion loses integer precision: 'size_t' (aka 'unsigned long') to 'unsigned int' [-Werror,-Wshorten-64-to-32] { return m_string.find(s, start, caseSentitive); } ~~~~~~~~ ^~~~~
Attachments
Patch v1
(2.80 KB, patch)
2013-04-22 07:39 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2013-04-22 07:39:10 PDT
Created
attachment 199027
[details]
Patch v1
David Kilzer (:ddkilzer)
Comment 2
2013-04-22 07:45:20 PDT
> WTF::AtomicString::find() should take unsigned 'start' argument
Because WTF::String::find() takes an unsigned 'start' argument.
WebKit Commit Bot
Comment 3
2013-04-22 08:30:19 PDT
Comment on
attachment 199027
[details]
Patch v1 Clearing flags on attachment: 199027 Committed
r148884
: <
http://trac.webkit.org/changeset/148884
>
WebKit Commit Bot
Comment 4
2013-04-22 08:30:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug