WTF::AtomicString::find() should take unsigned 'start' argument <http://webkit.org/b/114958>

Reviewed by Darin Adler.

Fixes the following warnings with -Wshorten-64-to-32:

    AtomicString.h:113:76: error: implicit conversion loses integer precision: 'size_t' (aka 'unsigned long') to 'unsigned int' [-Werror,-Wshorten-64-to-32]
        size_t find(UChar c, size_t start = 0) const { return m_string.find(c, start); }
                                                              ~~~~~~~~         ^~~~~
    AtomicString.h:115:35: error: implicit conversion loses integer precision: 'size_t' (aka 'unsigned long') to 'unsigned int' [-Werror,-Wshorten-64-to-32]
            { return m_string.find(s, start, caseSentitive); }
                     ~~~~~~~~         ^~~~~
    AtomicString.h:117:35: error: implicit conversion loses integer precision: 'size_t' (aka 'unsigned long') to 'unsigned int' [-Werror,-Wshorten-64-to-32]
            { return m_string.find(s, start, caseSentitive); }
                     ~~~~~~~~         ^~~~~

* wtf/text/AtomicString.h:
(WTF::AtomicString::find): Change type of 'start' argument from
size_t to unsigned.


Canonical link: https://commits.webkit.org/133385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148884 268f45cc-cd09-0410-ab3c-d52691b4dbfc